Implement the PDF sign/verify and move the tests to an own module